update news page

--- a/src/components/HeaderNav/styles.less
+++ b/src/components/HeaderNav/styles.less
@@ -65,72 +65,72 @@ header {
     }
 }
 
-@media screen and (max-width: 1400px) and (min-width:640px) {
-    .activeNavFartherBox{
-        .moreIcon{
-            transition: all 0.3s ease-out;
-            transform: rotateZ(180deg);
-        }
-        &:hover{
-        background: none!important;
-        transform: translateX(0)!important;
-        padding-left: 0!important;
-        // .moreIcon{
-        //     transform: rotateZ(90deg);
-        // }
-        }
-    }
-    .activeNav{
-        padding: 0;
-        &:hover{
-            transform: translateX(0);
-            transition: all 0.5s ease-out;
-            width: calc(100%);
-            padding-left: 0;
-        }
-    }
-    .navBox{
-        span{
-            display: none;
-        }
+// @media screen and (max-width: 1400px) and (min-width:1020px) {
+//     .activeNavFartherBox{
+//         .moreIcon{
+//             transition: all 0.3s ease-out;
+//             transform: rotateZ(180deg);
+//         }
+//         &:hover{
+//         background: none!important;
+//         transform: translateX(0)!important;
+//         padding-left: 0!important;
+//         // .moreIcon{
+//         //     transform: rotateZ(90deg);
+//         // }
+//         }
+//     }
+//     .activeNav{
+//         padding: 0;
+//         &:hover{
+//             transform: translateX(0);
+//             transition: all 0.5s ease-out;
+//             width: calc(100%);
+//             padding-left: 0;
+//         }
+//     }
+//     .navBox{
+//         span{
+//             display: none;
+//         }
         
-        &:hover{
-            span{
-                display: block;
-            }
-        }
-        .navBtn{
-            padding: 12px 0;
-            &::before{
-                display: none;
-            }
-        }
-        .activeNavOld{
-            transform: translateX(0)!important;
-            background: none!important; 
-            transform: none; 
-            transition: none; 
-            width: auto; 
-            padding-left: 0!important;
-        }
-        .navBtn{
-            // pointer-events: none;
+//         &:hover{
+//             span{
+//                 display: block;
+//             }
+//         }
+//         .navBtn{
+//             padding: 12px 0;
+//             &::before{
+//                 display: none;
+//             }
+//         }
+//         .activeNavOld{
+//             transform: translateX(0)!important;
+//             background: none!important; 
+//             transform: none; 
+//             transition: none; 
+//             width: auto; 
+//             padding-left: 0!important;
+//         }
+//         .navBtn{
+//             // pointer-events: none;
     
-        }
+//         }
         
-        li, li div,.logout{
-            margin: 0 auto;
-        }
-        li a{
-            justify-content: center;
-        }
-        .moreIcon{
-            display: none;
-        }
+//         li, li div,.logout{
+//             margin: 0 auto;
+//         }
+//         li a{
+//             justify-content: center;
+//         }
+//         .moreIcon{
+//             display: none;
+//         }
         
-    }
-}
-@media screen and (max-width:640px) {
+//     }
+// }
+@media screen and (max-width:1020px) {
     .logo{
         margin: 0;
     }
