--- a/src/pages/home/components/examCountdown/styles.module.less
+++ b/src/pages/home/components/examCountdown/styles.module.less
@@ -20,7 +20,7 @@
     .item2_inner2_inner1{
         font-size: 58px;
         text-align: center;
-        pointer-events: none;
+        // pointer-events: none;
     }
     .editIcon{
         position: absolute;
@@ -32,6 +32,7 @@
         height: 40px;
     }
     .editBox{
+        position: relative;
         line-height:40px;
         height: 40px;
         input{
