--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -3,6 +3,12 @@
 //     transition: all 1s ease-out;
 // }
 .light{
+    .colorWhite{
+        color: rgb(255, 255, 255);
+    }
+    .colorBlack{
+        color: rgb(0, 0, 0);
+    }
     .colorRed{
         color: rgb(224, 44, 44);
     }
@@ -137,6 +143,12 @@
 }
 .dark{
     // display: none;
+    .colorWhite{
+        color: rgb(0, 0, 0);
+    }
+    .colorBlack{
+        color: rgb(255, 255, 255);
+    }
     .colorRed{
         color: rgb(124, 49, 49);
     }
