--- a/src/pages/news/pages/community/index.less
+++ b/src/pages/news/pages/community/index.less
@@ -255,6 +255,38 @@
         display: grid;
         grid-template-columns: 1fr;
         column-gap: 0;
+        li{
+            margin-bottom: 15px;
+            font-size: 14px;
+            width: calc(100vw - 24px);
+            img{
+                margin-right: 12px;
+                width: 80px;
+                height: 80px;
+                border-radius: 6px;
+            }
+            .name{
+                font-size: 10px;
+                
+            }
+            h3{
+                font-weight: bold;
+                font-size: 18px;
+                width: calc(100vw - 140px);
+            }
+            .content{
+                font-size: 16px;
+            }
+            .bottomContent_box{
+                font-size: 14px;
+            }
+        }
+    }
+    .hotestNews{
+        section{
+            font-size: 1.1em;
+            line-height: 2em;
+        }
     }
 }
 // @media screen and (min-width: 200px) {
