--- a/src/style.less
+++ b/src/style.less
@@ -53,20 +53,9 @@ aside{
     overflow: hidden;
     height: 0;
     z-index: 99;
+    opacity: 0;
     // transition: height .4s ease-in-out;
-    &::before{
-        pointer-events:none;
-        content: "";
-        position: fixed;
-        top: 62px;
-        left: 0;
-        width: 100%;
-        height: calc(100% - 62px);
-        background-color: #c5e3ff54;
-        z-index: -1;
-        opacity: 0;
-        transition: opacity .4s ease-in-out;
-    }
+    transition: opacity .4s ease-in-out;
     .mobile_Nav_box{
         overflow-y: hidden;
         border-top: 1px solid #89898938;
@@ -101,18 +90,6 @@ aside{
     // &>div{
     //     height: calc(100vh - 158px);
     // }
-    &::before{
-        pointer-events:none;
-        content: "";
-        position: fixed;
-        top: 62px;
-        left: 0;
-        width: 100%;
-        height: calc(100% - 62px);
-        background-color: #c5e3ff54;
-        z-index: -1;
-        
-    }
     // transition: all .4s ease-in-out .1s;
     .notice_box{
         position: absolute;
@@ -161,6 +138,7 @@ aside{
         
     }
 }
+
 // @media screen and (max-width: 1400px) {
 //     aside{
 //         width: 48px;
@@ -209,11 +187,12 @@ aside{
     }
     .mobile_Nav_out_box_open{
         height: calc(100vh - 62px);
+        opacity: 1;
         // transition: height .4s ease-in-out;
-        &::before{
-            opacity: 1;
-            transition: opacity .4s ease-in-out;
-        }
+        // &::before{
+        //     opacity: 1;
+        //     transition: opacity .4s ease-in-out;
+        // }
     }
     .notice_out_box_open{
         // height: calc(100vh - 62px);
