--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -25,7 +25,7 @@
         color: #333
     };
     .textColorGgray{
-        color:#5e5e5e;
+        color:#a5a5a5;
     }
     .btnDefault{
         background-color: #46a7a7;
@@ -42,6 +42,9 @@
     }
     .bg3{
         background-color: #f3f3f3;
+    }
+    .bg4{
+        background-color: #d7d7d7f5;
     }
     .bg_gray{
         background-color: #cecece;
@@ -166,7 +169,7 @@
     };
     
     .textColorGgray{
-        color:#c2c2c2;
+        color:#717171;
     }
     .btnDefault{
         background-color: #1a5050;
@@ -183,6 +186,9 @@
     }
     .bg3{
         background-color: #4c4c4c;
+    }
+    .bg4{
+        background-color: #2e2e2ef5;
     }
     .bg_gray{
         background-color: #444444;
