--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -24,7 +24,7 @@
     .textColor,a{
         color: #333
     };
-    .textColorGgray{
+    .textColorGray{
         color:#a5a5a5;
     }
     .btnDefault{
@@ -168,7 +168,7 @@
         color: #b9b9b9
     };
     
-    .textColorGgray{
+    .textColorGray{
         color:#717171;
     }
     .btnDefault{
