--- a/src/components/MaskElement/index.module.less
+++ b/src/components/MaskElement/index.module.less
@@ -2,8 +2,8 @@
     position: fixed;
     top: 62px;
     left: 0;
-    width: 100%;
-    height: calc(100% - 62px);
+    width: 100vw;
+    height: calc(100vw - 62px);
     background-color: #c5e3ff54;
     z-index: -1;
     // opacity: 0;
