--- a/src/pages/home/styles.less
+++ b/src/pages/home/styles.less
@@ -176,7 +176,7 @@
 //news--------------------------------------------------------------
 .newsBox{
     ul{
-        width: 19.5em;
+        // width: 19.5em;
     }
 }
 .newsItemBox{
