--- a/src/pages/cards/styles.less
+++ b/src/pages/cards/styles.less
@@ -120,7 +120,11 @@
         }
 
     }
-    .screen_mid_inner1,.screen_mid_inner2{
+    .screen_mid_inner1,.screen_mid_inner2,.smoothedLine{
         height: 160px;
+    }
+    .no-select{
+        max-height: 420px;
+        overflow-y: auto;
     }
 }
