update cards page

--- a/src/pages/cards/components/timeWeather/styles.module.less
+++ b/src/pages/cards/components/timeWeather/styles.module.less
@@ -1,3 +1,13 @@
+.item2_inner3_inner2_inner1_small{
+    font-size: 32px;
+    font-weight: bold;
+    display: flex;
+    .flicker{
+        animation: flicker 1s ease-out;
+        // animation-duration: ;
+        animation-iteration-count: infinite;
+    }
+}
 .item2_inner3_inner2{
     margin: 0;
     height: 100%;
