--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -31,6 +31,10 @@
         background-color: #46a7a7;
         color: #186d6d;
     }
+    .btnDefaultDeep{
+        background-color: #297070;
+        color: #186d6d;
+    }
     .bg1{
         background-color: #fff;
     }
@@ -48,6 +52,9 @@
     }
     .bg_gray{
         background-color: #cecece;
+    }
+    .bg_black{
+        background-color: #2b2b2b;
     }
     table{
         background-color: #cccccc;
@@ -172,8 +179,12 @@
         color:#717171;
     }
     .btnDefault{
-        background-color: #1a5050;
+        background-color: #269494;
         color: #51a1a1;
+    }
+    .btnDefaultDeep{
+        background-color: #227070;
+        color: #186d6d;
     }
     .bg1{
         background-color: #1e1f21;
@@ -192,6 +203,9 @@
     }
     .bg_gray{
         background-color: #444444;
+    }
+    .bg_black{
+        background-color: #ffffff;
     }
     table{
         background-color: #36383b;
